Change synchornous akonadi job execution to async to prevent strange deadlocks. Remove code that doesn't make sense anymore, and try to actually make it work (fails though, too tired to debug it, but see the existing FIXME).

BUG: 275789